change image version

--- a/k8s/order-service/order-deployment.yaml
+++ b/k8s/order-service/order-deployment.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
         - name: order-service
-          image: order-service:latest
+          image: order-service:v2
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8000
